[package]
name = "adex-explorer"
version = "0.1.0"
authors = ["AdEx Network <explorer@adex.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.3.5"
wasm-bindgen = "^0.2.42"
web-sys = "^0.3.19"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"
num-bigint = "0.2"
