[package]
name = "adex-explorer"
version = "0.1.0"
authors = ["AdEx Network <explorer@adex.network>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.4.0"
wasm-bindgen = "^0.2.42"
web-sys = "^0.3.19"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.1.26"
num = "0.2.0"
num-format = "0.4.0"
chrono = { version = "0.4.6", features = ['serde'] }
js-sys = "0.3"
adex-domain = { git = "https://github.com/AdExNetwork/adex-validator-stack-rust.git", package = "domain" }
lazysort = "0.2"
